# Computing-methods-Lab1

./: CMakeLists.txt  CompMethods.hpp  README.md  main.cpp
Interpolation/: main.py  my_interpolate.py
NonLinearEquationSolver/: CMakeLists.txt  NonlinEqvSolver.hpp  main.cpp
NonLinearSystemSolve/: main.py  solver.py
PageRank/: CMakeLists.txt
PageRank/headers/: PageRank.h
PageRank/sources/: PageRank.cpp  main.cpp
SysOfLinEqvSolver/: edulinalg.py  main.py
